# project-garden-sensor-array

./: .gitignore  404.html  README.md  ReadMe.md  api.html  cred.json  index.html  makefile  markdown-page.html  package-lock.json  package.json  sitemap.xml
.github/workflows/: test.yml
CamTest/: camScript.py  hubPhoto.js  imgUp.py
assets/css/: styles.0e11fd34.css  styles.357b1869.css  styles.d6b0099e.css
assets/js/: 07fcff5e.68914992.js  07fcff5e.9640bdeb.js  0969411b.6d79a23d.js  0969411b.7a7a5bc8.js  14eb3368.dc2a9dfe.js  1638.0e4e197f.js  17896441.21e58a23.js  17896441.474d7311.js  17896441.6230f859.js  1be78505.1e4a1d3b.js  1f391b9e.9f9b92de.js  208c22c0.26a7f681.js  208c22c0.b865f6cd.js  21755433.29328e01.js  21755433.302ba9ad.js  21755433.4b278cba.js  21755433.51a1c9d0.js  21755433.5364f7fb.js  21755433.59b53dc4.js  21755433.6f41c513.js  21755433.ab25f93e.js  21755433.b3661cd3.js  21755433.c334fa4f.js  21755433.f7d83b9b.js  24896685.07d5404d.js  24896685.1bcec680.js  24896685.21ddebdc.js  24896685.324c0a33.js  24896685.57212028.js  24896685.58ce094a.js  24896685.6092a452.js  24896685.c08df3f8.js  24896685.f9644fa7.js  2547.b31d1fd9.js  2c3f85bd.8ff4d606.js  2c3f85bd.f18bfc65.js  2fe53f61.b2923998.js  2fe53f61.f3dbca46.js  3527.cf40c148.js  393be207.7f7124ce.js  (+568 more)
docs/: intro.html
docs/api-specification/: backend-api.html  calculator-model-generated.html  design-api-intro.html  frontend Function Calls.html  frontend-api.html  openapi-spec.html  python_docs.html  server.html
docs/category/: api-specification.html  requirements-specification.html  software-development-plan.html  system-architecture.html  test-procedures.html
docs/development-plan/: activities.html  schedule.html  (+3 more)
documentation/: docusaurus.config.js  package.json
gsa-website/: package-lock.json  package.json
pydoc/: Bluetooth.html
src/: CMakeLists.txt  SCU.gatt  SCU.h  garden_sensor.h  pico_ble.c  server.cpp  server_pico.c
src/HUB_code/: Bluetooth.py  Broker.py  Database.py  HUB_Class.py  Sensor.py  camCheck.py  camScript.py  client.py  hub_test.py
src/SCU/: SCU_Main.ino
src/SCU_Code/Server/: CMakeLists.txt  SCU.gatt  Server.c
src/SCU_Code/bh1750/: bh1750.c  bh1750.h
src/SCU_Code/seesaw/: seesaw.c  seesaw.h
src/SCU_Main_Test/: CMakeLists.txt  CommonCxxTests.cxx  SCU_Test_Program.cpp  testformat_sensor_data.cpp  testgetASSMsoilmoisture.cpp  testgetASSMtempC.cpp  testproperties.h
src/SCU_Unit_Test_Program/: testgetBH1750lux.cpp  testgetSensorData.cpp
src/User_Code/: index.html  user.py
tutorial/: intro.html
(+185 files in other folders)
